--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,25 @@
 {
     "version": 2,
-    "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.3.1" }
-    },
+    "framework": null,
+
+    "builds": [
+        { "src": "/api/index.php", "use": "vercel-php@0.6.2" },
+        { "src": "/public/**", "use": "@vercel/static" }
+    ],
     "routes": [
+        {
+            "src": "/(css|js)/(.*)",
+            "dest": "public/$1/$2"
+        },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
     ],
+
     "env": {
-        "APP_NAME": "Laravel Vercel",
         "APP_ENV": "production",
-        "APP_DEBUG": "false",
+        "APP_DEBUG": "true",
         "APP_URL": "https://data-center-bpg.vercel.app",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
@@ -21,11 +28,9 @@
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
         "VIEW_COMPILED_PATH": "/tmp",
+
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie",
-        "VIEW_COMPILED_PATH": "/tmp/views",
-        "SSR_TEMP_PATH": "/tmp/ssr",
-        "NODE_PATH": "node"
+        "SESSION_DRIVER": "cookie"
     }
 }
